fix article shift

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,6 +29,10 @@
         }
     }
     
+    ul ul li a {
+        padding-left: 2rem;
+    }
+    
     ul {
         .large {
             font-size: 14px!important;
